--- a/src/layouts/Content.astro
+++ b/src/layouts/Content.astro
@@ -11,7 +11,7 @@ const { title } = Astro.props;
 <Layout title={title}>
     <Navbar></Navbar>
 
-    <main class="container m-auto p-[1em] max-w-[175ch]">
+    <main class="container m-auto p-[1em] max-w-[175ch] z-[-1]">
         <slot></slot>
     </main>
 </Layout>
