--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -18,7 +18,7 @@ import OpenPeeps from "../components/OpenPeeps.vue";
                                     <div class="text-center mb-24">
                                         <img
                                             class="mx-auto w-64 my-12"
-                                            src="/telkomsigma.png"
+                                            src="/sigmaku/telkomsigma.png"
                                             alt="logo"
                                         />
                                     </div>
