--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import DarkModeToggle from '../components/DarkModeToggle.vue';
 ---
 
 <Content title="Home | Sigmaku">
-	<div class="flex gap-6 mt-6 justify-center items-center">
+	<div class="flex gap-6 justify-center items-center">
 		<div class="flex-none">
 			<div class="avatar">
 				<div class="w-24 mask mask-squircle ring ring-primary bg-white">
