--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Card from '../components/Card.astro';
 import DarkModeToggle from '../components/DarkModeToggle.vue';
 ---
 
-<Content title="Home | Sigmaku">
+<Content title="Home">
 	<div class="flex gap-6 justify-center items-center">
 		<div class="flex-none">
 			<div class="avatar">
@@ -13,8 +13,8 @@ import DarkModeToggle from '../components/DarkModeToggle.vue';
 				</div>
 			</div>
 		</div>
-		<div class="grow prose">
-			<h1 class="mb-2 mt-0 text-2xl">Selamat datang, <span class="text-primary font-bold">Zaid Billah</span></h1>
+		<div class="grow">
+			<h1 class="mb-2 mt-0 prose text-2xl">Selamat datang, <span class="text-primary font-bold">Zaid Billah</span></h1>
 			<div class="flex gap-2 mb-2">
 				<a href="" class="badge badge-success hover:badge-info">PKWT: 15 Agustus 2023</a>
 				<a href="" class="badge hover:badge-outline">IT Support</a>
