--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -4,7 +4,7 @@ import Quotes from "../components/Quotes.vue";
 import OpenPeeps from "../components/OpenPeeps.vue";
 ---
 
-<Layout title="Login | Sigmaku">
+<Layout title="Login">
     <section class="h-full w-full gradient-form bg-base-100 md:h-screen">
         <div class="container m-auto py-12 px-6 h-full">
             <div
