--- a/src/layouts/BaseContent.astro
+++ b/src/layouts/BaseContent.astro
@@ -1,18 +1,15 @@
 ---
 import Layout from "./Layout.astro";
 import Navbar from "../components/Navbar.astro";
-export interface Props {
-	title: string;
-}
 
-const { title } = Astro.props;
+const { frontmatter } = Astro.props;
 ---
 
-<Layout title={`${title} | SigmaKu`}>
+<Layout title={`${frontmatter.title} | SigmaKu`}>
     <Navbar></Navbar>
 
     <main class="container m-auto p-[1em] max-w-[175ch] z-[-1]">
-        <div class="mt-6">
+        <div class="prose my-12 max-w-[120ch] mx-auto">
             <slot></slot>
         </div>
     </main>
