--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,6 +19,8 @@ const { title } = Astro.props;
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
 		/>
+
+		<link rel="stylesheet" href="/sigmaku/fonts.css">
 	</head>
 	<body>
 		<slot />
