--- a/src/layouts/Content.astro
+++ b/src/layouts/Content.astro
@@ -12,7 +12,7 @@ const { title } = Astro.props;
     <Navbar></Navbar>
 
     <main class="container m-auto p-[1em] max-w-[175ch] z-[-1]">
-        <div class="mt-6">
+        <div class="mt-6 w-full">
             <slot></slot>
         </div>
     </main>
