--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -58,13 +58,13 @@
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="/sigmaku/hc">
                         <svg width="32" height="32" viewBox="0 0 32 32" class="inline-block w-6 h-6"><g fill="none"><path fill="#26C9FC" d="M27.8 30H4.2C3 30 2 29 2 27.8V14.2C2 13 3 12 4.2 12h23.5c1.3 0 2.3 1 2.3 2.2v13.5c0 1.3-1 2.3-2.2 2.3Z"/><path fill="#F4F4F4" d="M26.405 28h-11.81c-.297 0-.595-.194-.595-.58v-1.84c0-.29.198-.58.595-.58h11.81c.297 0 .595.194.595.58v1.84c0 .29-.298.58-.595.58Z"/><path fill="#fff" d="M11.024 23H4.976c-.393 0-.785.741-.923.328c-.034-.1-.053-.21-.053-.328v-8c0-.5.39-1 .976-1h6.048c.488 0 .976.4.976 1v8c0 .072-.006.142-.017.208c-.08.483-.444-.208-.959-.208Z"/><path fill="#0074BA" d="M14.5 15a.5.5 0 0 0 0 1h12a.5.5 0 1 0 0-1h-12Zm-.5 3.5a.5.5 0 0 1 .5-.5h12a.5.5 0 1 1 0 1h-12a.5.5 0 0 1-.5-.5Zm0 3a.5.5 0 0 1 .5-.5h12a.5.5 0 1 1 0 1h-12a.5.5 0 0 1-.5-.5Z"/><path fill="#321B41" d="M8.476 15h-.98c-1.076 0-1.86.92-1.762 2.045l.04.53a.71.71 0 0 0-.53.698c0 .379.282.689.639.714l.047.615c.077.643.517 1.223 1.13 1.442c-1.274.283-2.364 1.084-3.06 2.181c.11.474.53.775.951.775h6.07c.587 0 .979-.41.979-1.023a4.874 4.874 0 0 0-2.995-1.955c.564-.218.964-.733 1.037-1.42l.047-.615a.704.704 0 0 0 .638-.714a.71.71 0 0 0-.53-.698l.04-.53c.1-1.125-.781-2.045-1.76-2.045ZM15.5 27h10c.2 0 .5-.2.5-.5s-.2-.5-.5-.5h-10c-.3 0-.5.2-.5.5s.2.5.5.5Z"/></g></svg>
                         HC Related
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="/sigmaku/settings">
                         <svg width="32" height="32" viewBox="0 0 32 32" class="inline-block w-6 h-6"><g fill="none"><path fill="#7D4533" d="m13.121 8.879l15 15a3 3 0 1 1-4.242 4.242l-15-15L13.12 8.88Z"/><path fill="#B4ACBC" d="M11.427 2.23L4.353 9.303a.5.5 0 0 0 0 .707L6 13l2.95 1.607a.5.5 0 0 0 .707 0l4.95-4.95a.5.5 0 0 0 0-.707L12.657 7c-.477-.48-.05-1-.05-1l2.724-2.724a.5.5 0 0 0-.301-.85l-3.196-.34a.5.5 0 0 0-.407.144ZM26.32 9.125l2.55-2.55c.32-.33.88-.17.99.28c.4 1.66-.04 3.48-1.34 4.78a5.058 5.058 0 0 1-5.115 1.244l-9.736 9.804a5.077 5.077 0 0 1-1.32 5.102a5.062 5.062 0 0 1-4.72 1.28a.592.592 0 0 1-.28-.99l2.55-2.55c.23-.23.23-.6 0-.83l-1.61-1.61a.585.585 0 0 0-.83 0l-2.55 2.55c-.32.33-.88.17-.99-.28c-.4-1.66.04-3.48 1.34-4.78a5.058 5.058 0 0 1 5.166-1.228l9.702-9.77a5.078 5.078 0 0 1 1.303-5.152a5.062 5.062 0 0 1 4.72-1.28c.45.11.6.67.28.99l-2.55 2.55c-.23.23-.23.6 0 .83l1.61 1.61c.23.23.6.23.83 0Z"/><path fill="#CDC4D6" d="M1.177 11.298a.25.25 0 0 1 0-.353l.643-.644a2 2 0 0 1 2.829 0l3.889 3.89a2 2 0 0 1 0 2.828l-.644.643a.25.25 0 0 1-.353 0l-6.364-6.364Z"/></g></svg>
                         Settings
                     </a>
