cis pages + pia pages

--- a/src/components/AppCard.astro
+++ b/src/components/AppCard.astro
@@ -15,7 +15,7 @@ const short = appName.split(' ').map(w => w.substring(0, 1)).join('').toUpperCas
 const vpn = faker.datatype.boolean()
 ---
 
-<Card body={appName} title={short} href="" image="icon">
+<Card body={appName} title={short} href="/sigmaku/app/pia" image="icon">
     <figure class="w-full h-64" slot="image">
         <img src={`https://api.iconify.design/fluent-emoji-flat:${image}.svg`} alt="App" class="h-48 w-48 bg-neutral">
     </figure>
