--- a/src/components/OrgUnit.astro
+++ b/src/components/OrgUnit.astro
@@ -13,7 +13,7 @@ const { name, short } = Astro.props;
             <p><span class="text-primary font-bold">{short}</span>: {name}</p>
         </div>
         <div class="flex-none">
-            <button class="btn btn-sm btn-primary">See Detail</button>
+            <a href="/sigmaku/orgs/cis" class="btn btn-sm btn-primary">See Detail</a>
         </div>
     </div>
 
