--- a/src/pages/app/index.astro
+++ b/src/pages/app/index.astro
@@ -27,13 +27,13 @@ const totalApp = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
 
     <div class="mt-6 grid grid-cols-1 gap-6 sm:grid-cols-2 lg:grid-cols-4">
 
-        <Card body="Project Implementation Application" title="PIA" href="" image="icon">
+        <Card body="Project Implementation Application" title="PIA" href="/sigmaku/app/pia/" image="icon">
             <p slot="title" class="inline-flex items-center gap-3">
                 <span>PIA</span>
                 <a class="badge badge-success hover:badge-info">VPN</a>
             </p>
             <figure class="w-full h-64" slot="image">
-                <img src="https://api.iconify.design/fluent-emoji-flat:desktop-computer.svg" alt="App" class="h-48 w-48 bg-neutral">
+                <img src="/sigmaku/pia.png" alt="App" class="h-48 w-48 bg-neutral">
             </figure>
         </Card>
         
