--- a/src/pages/profile.astro
+++ b/src/pages/profile.astro
@@ -6,7 +6,7 @@ import Content from "../layouts/Content.astro";
 <Content title="Zaid Billah">
     <div class="flex min-h-[85vh] gap-3">
         <section class="flex flex-col gap-3 grow-0">
-            <div class="avatar">
+            <div class="avatar mb-6">
 				<div class="w-64 mask mask-squircle ring ring-primary bg-white">
 				  <img src="https://avatars.dicebear.com/api/croodles/zaid.svg" />
 				</div>
